# private-model-serving

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.shade.yml  docker-compose.yml  policy.json  pyproject.toml  shade.yml  test_cvm_app.py
app/: app.py  pyproject.toml  utils.py
client/: Makefile  compute_hash.py  verify.py
cvm/: .env.example  Makefile  docker-compose.dev.override.yml  docker-compose.staging.macOS.override.yml  docker-compose.yml  test_cvm.py
cvm/model-service/: Dockerfile  model_service.py
cvm/model-service/tests/: test_model_service.py
cvm/vllm-patch/: Dockerfile  harmony-streaming-tool-call-fallback.patch
examples/: push_model.py
model-owner/: Makefile  compute_hash.py  pyproject.toml  test_model_owner.py  verify.py
scenarios/model-owner/: Makefile
scenarios/user/: pyproject.toml
scripts/: encrypt_env.py
services/cert-manager/nginx_conf/: https-dev.conf.tmpl  https.conf.tmpl
tests/: test_versions.py
user/: test_user.py
